--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ main{
     margin: 13px 0px;
     display: flex;
     align-items: center;
-    width: 380px;
+    width: auto;
     margin-right: 24px;
 }
 .resume a{
@@ -112,7 +112,7 @@ justify-content: center;
     border-radius: 70px;
     text-align:center;
     margin: 3%  auto;
-    width: 70%;
+    width: 100%;
     color: white;
     transition: 1.5s ease;
 }
